prime stage update

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Acme Explosives</title>
-  <link rel="stylesheet" type="text/css" href="acme.css">
-  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <title> ACME Explosives!!</title>
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="acme.css">
 </head>
 <body>
-  <h1>My Explosives  shop</h1>
+
+<nav id="nav">
+        <h1>MY EXPLOSIVES SHOP!!</h1>
+        <div id="Container">
+        </div>
+    </nav>
+    <select id="dropDown1"></select>
+    <div id="output" class="container-fluid"></div>
 
 
-  <div id="container">
-    <select id="menu" >
-      <li></li>
-      <li></li>
-      <li></li>
-    </select>
-  </div>
-<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js" ></script>
-<script type="text/javascript" src="acme.js" ></script>
+<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="acme.js"></script>
 </body>
 </html>
