--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title> ACME Explosives!!</title>
-    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="acme.css">
-</head>
-<body>
+  <head>
+      <title> ACME Explosives!!</title>
+      <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="acme.css">
+  </head>
+  <body>
 
-<nav id="nav">
-        <h1>MY EXPLOSIVES SHOP!!</h1>
-        <div id="Container">
-        </div>
+    <nav id="nav">
+      <h1>MY EXPLOSIVES SHOP!!</h1>
+      choose your Category <select id="dropDown1"> <option id="empty">----</option></option></select>
     </nav>
-    <select id="dropDown1"></select>
     <div id="output" class="container-fluid"></div>
 
 
-<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="acme.js"></script>
-</body>
+
+
+
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="acme.js"></script>
+    <!-- <script type="text/javascript" src="untitled.js"></script> -->
+  </body>
 </html>
