mate most functionality

--- a/index.html
+++ b/index.html
@@ -9,13 +9,26 @@
 
     <nav id="nav">
       <h1>MY EXPLOSIVES SHOP!!</h1>
-      choose your Category <select id="dropDown1"> <option id="empty">----</option></option></select>
+      Choose your Category
+      <select id="dropDown1">
+        <option id="empty">----</option>
+      </select>
     </nav>
-    <div id="output" class="container-fluid"></div>
 
-
-
-
+    <div id="img"><img src="fire.jpg"></div>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Product Name</th>
+            <th>Product Type</th>
+            <th>Product Description</th>
+          </tr>
+        </thead>
+        <tbody id="output">
+        </tbody>
+      </table>
+    </div>
 
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="acme.js"></script>
